global background image added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
     <!-- Limit Part End Here -->
     <!-- Global Part start Here -->
-    <section class="container">
+    <section class="container global-back-img">
         <div class="half-part">
             <h1>Know Our</h1>
             <h1>Global Community</h1>
